--- a/css/main.scss
+++ b/css/main.scss
@@ -24,4 +24,50 @@ body {
             color: var(--primary-color);
         }
     }
+
+    nav{
+        display: none;
+    }
+    
+    .container{
+        display: flex;
+        place-content: space-between;
+    }
+
+    .mobile-menu{
+        cursor: pointer;
+    }
+}
+
+a {
+    color: #4444;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+section {
+    padding: 5em 2em;
+}
+
+.hero {
+    text-align: center;
+}
+
+.left-col{
+    .subhead {
+        text-transform: uppercase;
+        font-weight: bold;
+        color: gray;
+        letter-spacing: .2em;
+    }
+
+    h1 {
+        line-height: 1.3em;
+        font-size: 2.5em;
+        margin-top: .2em;
+    }
 }
