--- a/css/main.css
+++ b/css/main.css
@@ -63,4 +63,56 @@ section {
   line-height: 1.3em;
   font-size: 2.5em;
   margin-top: 0.2em;
+}
+.left-col .primary-cta {
+  background-color: var(--primary-color);
+  text-decoration: none;
+  color: #FFF;
+  border-radius: 5em;
+  padding: 0.6em 1.3em;
+  font-size: 1.4em;
+  font-weight: bold;
+  display: inline-block;
+}
+.left-col .watch-video-cta {
+  display: block;
+  margin-top: 1em;
+}
+.left-col img {
+  margin-right: 0.5em;
+}
+
+.hero-img {
+  margin-top: 4em;
+  width: 70%;
+}
+
+section.features-section {
+  background-color: #20272E;
+  color: #FFF;
+}
+
+.man {
+  display: none;
+}
+
+ul.features-list {
+  margin: 0;
+  padding-left: 0.1em;
+}
+ul.features-list li {
+  font-size: 1.1em;
+  margin-bottom: 1em;
+  margin-left: 2em;
+  position: relative;
+}
+ul.features-list li::before {
+  content: "";
+  left: -3em;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-image: url("../images/bullet.svg");
+  background-size: contain;
+  margin-right: 0.5em;
 }/*# sourceMappingURL=main.css.map */
