--- a/css/main.scss
+++ b/css/main.scss
@@ -70,4 +70,63 @@ section {
         font-size: 2.5em;
         margin-top: .2em;
     }
+
+    .primary-cta {
+        background-color: var(--primary-color);
+        text-decoration:  none;
+        color: #FFF;
+        border-radius: 5em;
+        padding: .6em 1.3em;
+        font-size: 1.4em;
+        font-weight: bold;
+        display: inline-block;
+    }
+
+    .watch-video-cta{
+        display: block;
+        margin-top: 1em;
+    }
+
+    img {
+        margin-right: .5em;
+    }
+} 
+
+
+.hero-img {
+     margin-top: 4em;
+     width: 70%;
+}
+
+section.features-section{
+    background-color: #20272E;
+    color: #FFF;
+}
+
+.man{
+    display: none;
+}
+
+ul.features-list{
+    margin: 0;
+    padding-left: .1em;
+    //display: grid;
+
+    li {
+        font-size: 1.1em;
+        margin-bottom: 1em;
+        margin-left: 2em;
+        position: relative;
+
+        &::before {
+            content: '';
+            left: -3em;
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-image: url('../images/bullet.svg');
+            background-size: contain;
+            margin-right: .5em;
+        }
+    }
 }
